@@ -1,3 +1,8 @@
+2005-10-17  Vincent Noel  <vnoel@cox.net>
+
+	* logrtns.c (ParseLine): Handle zero-length lines better
+	(e.g. don't crash).
+
 2005-10-14  Vincent Noel  <vnoel@cox.net>
 
 	* log_repaint.c: (logline_get_date): Make static.
